<resources>
    <string name="app_name">SurMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Iniciar Sesión</string>
    <string name="user">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="passwordrecover">Recuperar Contraseña</string>
    <string name="registerhere">Registrate Aquí</string>
    <string name="register">Registrarse</string>
    <string name="selectusername">Elige un nombre de Usuario</string>
    <string name="insertusername">Escribe tu nombre de usuario</string>
    <string name="insertpassword">Escribe tu contraseña</string>
    <string name="validationError">Error de validación</string>
    <string name="userError">Error de usuario</string>
    <string name="PasswordError">Error de contraseña</string>
    <string name="welcome">Bienvenido a SuperMarket</string>
    <string name="wrongUserOrPassword">Usuario o Contraseña incorrecta</string>
    <string name="appTitle">SurMarket</string>
    <string name="shoppingcart">Carrito de compras</string>
    <string name="addnewproduct">Añadir nuevo producto</string>
    <string name="buy">Comprar</string>
</resources>